--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy201
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub-xqx.vercel.app"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://my-urls.vercel.app/"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
 
 # 文本托管后端
 VUE_APP_CONFIG_UPLOAD_BACKEND = "https://api.wcc.best"
